# DeskTab

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: disk.rs  hotkey.rs  mod.rs  window.rs
src-tauri/src/utils/: mod.rs  windows_api.rs
src/components/: DiskTab.vue  FileList.vue  HotkeyHandler.vue  TopBar.vue
src/hooks/: useDiskDrives.ts  useMousePosition.ts  useWindowControl.ts
src/stores/: diskStore.ts  windowStore.ts
src/styles/: global.css  variables.css
src/types/: disk.ts  window.ts
